--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+	testImplementation 'com.tngtech.junit.dataprovider:junit-jupiter-dataprovider:2.10'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
